# vesuvius-challenge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  train.py  vesuvius-predictions.ipynb  vesuvius_predictions.py
docs/: NOTES.md
experiments/: README.md  log.jsonl  status.py
scripts/: eval_metrics.py  run_experiment.sh  setup_gpu.sh
